@@ -89,6 +89,19 @@ testing.suites {
       testTask {
         // Required to enable `IssueExtension` for all tests.
         systemProperty("junit.jupiter.extensions.autodetection.enabled", true)
+
+        // Required to test configuration cache in tests when using withDebug()
+        // https://github.com/gradle/gradle/issues/22765#issuecomment-1339427241
+        jvmArgs(
+          "--add-opens",
+          "java.base/java.util=ALL-UNNAMED",
+          "--add-opens",
+          "java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+          "--add-opens",
+          "java.base/java.lang.invoke=ALL-UNNAMED",
+          "--add-opens",
+          "java.base/java.net=ALL-UNNAMED",
+        )
       }
     }
     dependencies {
